--- a/style.css
+++ b/style.css
@@ -1,21 +1,22 @@
 #title {
-    text-align: center;
+  text-align: center;
 }
 
 #desription {
-    text-align: center;
+  text-align: center;
 }
 
 body {
-    background-color: #35989c;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    text-align: center;
+  background-color: #35989c;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  text-align: center;
 }
 
 form {
-    background-color: #a4d9db;
-    max-width: 600px;
-    margin: 60px auto;
-    padding: 40px 40px;
-    box-shadow: 3px 5px 10px rgba(1, 10, 0, 0);
+  background-color: #a4d9db;
+  max-width: 600px;
+  margin: 60px auto;
+  padding: 40px 40px;
+  box-shadow: 3px 5px 10px rgba(1, 10, 0, 0);
 }
+/* kfmk */
