--- a/style.css
+++ b/style.css
@@ -1,66 +1,78 @@
 #title {
-  text-align: center;
+    text-align: center;
 }
 
 #desription {
-  text-align: center;
+    text-align: center;
+    text-size-adjust: 16px;
 }
 
 body {
-  background-color: #35989c;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  text-align: center;
+    background-color: #35989c;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-align: center;
 }
 
 .form-section {
-  width: 40%;
-  height: 1000px;
-  margin: 0 auto;
-  background: #262645;
-  color: #fff;
-  border-radius: 5px;
+    width: 40%;
+    height: 1000px;
+    margin: 0 auto;
+    background: #262645;
+    color: #fff;
+    border-radius: 5px;
 }
+
 .form-control {
-  margin: 10px;
-  padding: 10px;
-  display: block;
+    margin: 10px;
+    padding: 10px;
+    display: block;
 }
+
 input {
-  width: 80%;
-  padding: 10px;
+    width: 80%;
+    padding: 10px;
 }
+
 .label {
-  padding: 10px;
+    padding: 10px;
 }
+
 select {
-  width: 87%;
-  padding: 10px;
+    width: 87%;
+    padding: 10px;
 }
+
 .btn-container {
-  border: 1px solid;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: start;
+    border: 1px solid;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: start;
 }
+
 .text {
-  width: 100%;
+    width: 100%;
 }
+
 .btn {
-  width: 100%;
+    width: 100%;
 }
+
 button {
-  padding: 10px;
-  width: 100%;
-  background: #36b065;
-  color: #fff;
-  border: none;
-  font-size: 600;
-  font-weight: bold;
+    padding: 10px;
+    width: 100%;
+    background: #36b065;
+    color: #fff;
+    border: none;
+    font-size: 600;
+    font-weight: bold;
 }
+
 .chk1 {
-  position: relative;
+    position: relative;
 }
+
+
 /* form {
   background-color: #a4d9db;
   max-width: 600px;
